# Osler_bot

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/ai/: mod.rs
src/config/: mod.rs  secrets.rs
src/memory/: long_term.rs  mod.rs  short_term.rs
src/persona/: mod.rs
src/telegram/: mod.rs
src/tools/: filesystem.rs  mod.rs  shell.rs  web_fetch.rs  web_search.rs
src/ui/: chat.rs  onboarding.rs  settings.rs
