[package]
name = "osler"
version = "0.1.0"
edition = "2021"
description = "A secure, memory-efficient AI assistant with Telegram integration"

[[bin]]
name = "osler"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AI provider APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Telegram
teloxide = { version = "0.13", default-features = false, features = ["macros", "throttle"] }

# Security / Secrets
keyring = "3"
secrecy = { version = "0.10", features = ["serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# Database (bundled SQLite, no system dep)
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dirs = "5"

[profile.release]
opt-level = "z"      # Optimize for binary size
lto = true           # Link-time optimisation
codegen-units = 1
strip = true         # Strip debug symbols
